HOMEページの実装 #3

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,3 +1,14 @@
 <% provide(:title, "Home") %>
-<h1>StaticPages#home</h1>
-<p>Find me in app/views/static_pages/home.html.erb</p>
+<div class="jumbotron">
+  <div class="container">
+    <h1 class="display-4">より簡単に。そしてよりよく。</h1>
+    <p class="lead">DIGIHAIは企業と配達員をつなぐ、マッチングサービスです。<br>
+    昨今のEC需要の増加、人手不足により配達員の負担は増加しています。<br>長時間労働、体力的負担の増加、サービス品質の低下、これらの問題の本質は、物量の増加にあります。<br>
+    DIGIHAIは、宅配事業の本質的課題である物量改善を目的に開発しました。</p>
+    <hr class="my-4">
+    <p>今すぐ募集を確認する。</p>
+    <div class='loginBtn'>
+      <a class="btn btn-primary btn-lg" href="#" role="button">ゲストログイン</a>
+    </div>
+  </div>
+</div>
