--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -3,7 +3,7 @@
     <div class="form-wrap">
       <div class="form-group text-center">
         <h2>DIGIHAI</h2>
-        <p class="text-secondary">仕事掲載したり応募してみよう！</p>
+        <p class="text-secondary">仕事を掲載したり応募してみよう！</p>
       </div>
       <%= form_with scope: resource, as: resource_name, url: registration_path(resource_name), local: true do |f| %>
         <div class="form-group">
@@ -23,7 +23,7 @@
         </div>
 
         <div class="actions">
-          <%= f.submit "登録する", class: "btn btn-primary w-100" %>
+          <%= f.submit "新規登録", class: "btn btn-primary w-100" %>
         </div>
       <% end %>
 
