--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,29 +1,36 @@
 <header>
-  <nav class="navbar navbar-expand-lg navbar-light">
-    <a class="navbar-brand" href="#">DIGIHAI</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav justify-content-end">
-        <li class="nav-item active">
-          <a class="nav-link" href="#">TOP <span class="sr-only"></span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">ABOUT</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">TERMS</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link disabled" href="#">LOGIN</a>
-        </li>
-        <li class="nav-item">
-          <% if user_signed_in? %>
-            <%= link_to 'ログアウト', destroy_user_session_path, method: :delete %>
-          <% end %>
-        </li>
-      </ul>
-    </div>
-  </nav>
+  <div class='headerSection'>
+    <nav class="navbar navbar-expand-lg navbar-light">
+      <a class="navbar-brand" href="#">DIGIHAI</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item nav-link">
+            <%= link_to 'TOP', root_path, class: 'nav-link' %>
+          </li>
+          <li class="nav-item nav-link">
+            <%= link_to 'ABOUT', static_pages_about_path, class: 'nav-link' %>
+          </li>
+          <li class="nav-item nav-link">
+            <%= link_to 'TERMS', static_pages_terms_path, class: 'nav-link' %>
+          </li>
+          <li class="nav-item nav-link">
+            <%= link_to 'LOGIN', new_user_session_path, class: 'nav-link' %>
+          </li>
+          <li class="nav-item nav-link">
+            <% if user_signed_in? %>
+              <%= link_to 'プロフィール', user_path(current_user), class: 'nav-link' %>
+            <% end %>
+          </li>
+          <li class="nav-item nav-link">
+            <% if user_signed_in? %>
+              <%= link_to 'ログアウト', destroy_user_session_path, method: :delete, class: 'nav-link' %>
+            <% end %>
+          </li>
+        </ul>
+      </div>
+    </nav>
+  </div>
 </header>
