--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -29,6 +29,11 @@
               <%= link_to 'ログアウト', destroy_user_session_path, method: :delete, class: 'nav-link' %>
             <% end %>
           </li>
+          <li class="nav-item nav-link">
+            <% if user_signed_in? %>
+              <%= link_to '求人を投稿', new_post_path, class: 'nav-link' %>
+            <% end %>
+          </li>
         </ul>
       </div>
     </nav>
