--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -14,7 +14,13 @@
 }
 
 .black-color {
-  color: #262626;
+  color: #333333;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-weight: bold;
+  text-decoration: none;
+  h2{
+    margin: 5px;
+  }
 }
 
 .parts {
@@ -27,15 +33,6 @@
   height: 36px;
   width: 36px;
   background-size: 36px !important;
-}
-
-.comment {
-  margin-left: 8px;
-  background-image: image-url("parts6");
-  background-repeat: no-repeat;
-  height: 36px;
-  width: 36px;
-  background-size: 40px !important;
 }
 
 .post-time {
