画像のスタイルを調整 #17

--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -5,6 +5,12 @@
   margin-right: 10px;
 }
 
+.card-img-top{
+  object-fit: cover;
+  height: 200px;
+  width: 100%;
+}
+
 .card-wrap {
   margin: 40px 0px;
 }
