--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -11,7 +11,7 @@
             <h2><%= post.title %></h2>
           <% end %>
           <% if post.user_id == current_user.id %>
-            <%= link_to post_path(post), method: :delete, class: "ml-auto mx-0 my-auto" do %>
+            <%= link_to post_path(post), method: :delete, class: "ml-auto mx-0 my-auto", data: { confirm: '本当に削除しますか？' } do %>
               <div class="delete-post-icon"></div>
             <% end %>
           <% end %>
