--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -4,6 +4,10 @@
       <div class="card-left">
         <%= image_tag @post.photos.first.image.url(:medium), class: "card-img-top" %>
       </div>
+      <div class="m-2">
+        <strong>【募集要項】</strong><br>
+        <%= @post.content %>
+      </div>
     </div>
     <div class="col-md-4">
       <div class="card-right">
@@ -17,19 +21,10 @@
               <strong><%= @post.user.name %></strong>
             <% end %>
             <% if @post.user_id == current_user.id %>
-            <%= link_to post_path(@post), method: :delete, class: "ml-auto mx-0 my-auto" do %>
+            <%= link_to post_path(@post), method: :delete, class: "ml-auto mx-0 my-auto", data: { confirm: '本当に削除しますか？' } do %>
               <div class="delete-post-icon"></div>
             <% end %>
           <% end %>
-          </div>
-          <div class="m-2">
-            <strong>
-              <%= @post.content %>
-            </strong>
-          </div>
-          <div class="comment-post-id">
-            <div class="m-2">
-            </div>
           </div>
         </div>
         <div class="row parts">
