--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -19,21 +19,20 @@
           <li class="nav-item nav-link">
             <%= link_to 'LOGIN', new_user_session_path, class: 'nav-link' %>
           </li>
-          <li class="nav-item nav-link">
-            <% if user_signed_in? %>
-              <%= link_to 'プロフィール', user_path(current_user), class: 'nav-link' %>
-            <% end %>
-          </li>
-          <li class="nav-item nav-link">
-            <% if user_signed_in? %>
-              <%= link_to 'ログアウト', destroy_user_session_path, method: :delete, class: 'nav-link' %>
-            <% end %>
-          </li>
-          <li class="nav-item nav-link">
-            <% if user_signed_in? %>
-              <%= link_to '求人を投稿', new_post_path, class: 'nav-link' %>
-            <% end %>
-          </li>
+          <% if user_signed_in? %>
+            <li class="nav-item nav-link">
+                <%= link_to 'プロフィール', user_path(current_user), class: 'nav-link' %>
+            </li>
+            <li class="nav-item nav-link">
+                <%= link_to '全てのユーザー', users_path, class: 'nav-link' %>
+            </li>
+            <li class="nav-item nav-link">
+                <%= link_to 'ログアウト', destroy_user_session_path, method: :delete, class: 'nav-link' %>
+            </li>
+            <li class="nav-item nav-link">
+                <%= link_to '求人を投稿', new_post_path, class: 'nav-link' %>
+            </li>
+          <% end %>
         </ul>
       </div>
     </nav>
