スタイルを変更 #17

--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -1,4 +1,12 @@
 header{
-  background-color: #10af9e;
+  background-color: #11376b;
   border-bottom: 1px solid rgba(0, 0, 0, .0975);
+}
+
+.navbar-light .navbar-nav .nav-link {
+  color: #ffffff;
+}
+
+.navbar-light .navbar-nav .nav-link:hover {
+  opacity: 0.7;
 }
