--- a/app/assets/stylesheets/footer.scss
+++ b/app/assets/stylesheets/footer.scss
@@ -3,6 +3,6 @@ footer {
   height: 120px; 
   text-align: center;
   padding: 50px 0;
-  background-color: #10af9e;
-  color: #777;
+  background-color: #11376b;
+  color: #ffffff;
 }
