--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <h1 class="text-center">全てのユーザー</h1>
+  <h1 class="text-center">すべてのユーザー</h1>
   <ul class="users">
     <% @users.each do |user| %>
       <li>
