UX向上のため変更 #17

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -14,23 +14,24 @@
             <%= link_to 'ABOUT', static_pages_about_path, class: 'nav-link' %>
           </li>
           <li class="nav-item nav-link">
-            <%= link_to 'TERMS', static_pages_terms_path, class: 'nav-link' %>
-          </li>
-          <li class="nav-item nav-link">
-            <%= link_to 'LOGIN', new_user_session_path, class: 'nav-link' %>
+            <%= link_to '利用規約', static_pages_terms_path, class: 'nav-link' %>
           </li>
           <% if user_signed_in? %>
             <li class="nav-item nav-link">
                 <%= link_to 'プロフィール', user_path(current_user), class: 'nav-link' %>
             </li>
             <li class="nav-item nav-link">
-                <%= link_to '全てのユーザー', users_path, class: 'nav-link' %>
+                <%= link_to 'すべてのユーザー', users_path, class: 'nav-link' %>
             </li>
             <li class="nav-item nav-link">
                 <%= link_to 'ログアウト', destroy_user_session_path, method: :delete, class: 'nav-link' %>
             </li>
             <li class="nav-item nav-link">
                 <%= link_to '求人を投稿', new_post_path, class: 'nav-link' %>
+            </li>
+          <% else %>
+            <li class="nav-item nav-link">
+              <%= link_to 'LOGIN', new_user_session_path, class: 'nav-link' %>
             </li>
           <% end %>
         </ul>
