--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -14,7 +14,7 @@
               <%= image_tag avatar_url(current_user), class: "post-profile-icon" %>
             </div>
             <div class="col pl-0">
-              <%= f.text_field :content, class: "form-control border-0", placeholder: "応募条件を書く" %>
+              <%= f.text_area :content, class: "form-control border-0", placeholder: "応募条件を書く" %>
             </div>
           </div>
           <div class="mb-3">
