--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,7 +6,7 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
+        <ul class="navbar-nav mr-auto">
           <li class="nav-item nav-link">
             <%= link_to 'TOP', root_path, class: 'nav-link' %>
           </li>
@@ -24,14 +24,21 @@
                 <%= link_to 'すべてのユーザー', users_path, class: 'nav-link' %>
             </li>
             <li class="nav-item nav-link">
-                <%= link_to 'ログアウト', destroy_user_session_path, method: :delete, class: 'nav-link' %>
-            </li>
-            <li class="nav-item nav-link">
                 <%= link_to '求人を投稿', new_post_path, class: 'nav-link' %>
+            </li>
+          <% end %>
+        </ul>
+        <ul class="navbar-nav">
+          <% if user_signed_in? %>
+            <li class="nav-item nav-link">
+                <%= link_to 'ログアウト', destroy_user_session_path, method: :delete, class: 'nav-link' %>
             </li>
           <% else %>
             <li class="nav-item nav-link">
-              <%= link_to 'LOGIN', new_user_session_path, class: 'nav-link' %>
+              <%= link_to '新規登録', new_user_registration_path, class: 'nav-link' %>
+            </li>
+            <li class="nav-item nav-link">
+              <%= link_to 'ログイン', new_user_session_path, class: 'nav-link' %>
             </li>
           <% end %>
         </ul>
