--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,7 @@
       </script>
     <![endif]-->
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <script src="https://kit.fontawesome.com/9ee9637e29.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <div id="wrapper">
