--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,4 +1,4 @@
-<header>
+<header class="sticky-top">
   <div class='headerSection'>
     <nav class="navbar navbar-expand-lg navbar-light p-4 mx-5">
       <%= link_to "DIGIHAI", root_path %>
@@ -8,7 +8,7 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item nav-link">
-            <%= link_to 'ホーム', users_path, class: 'nav-link' %>
+            <%= link_to '配達員一覧', root_path, class: 'nav-link' %>
           </li>
           <li class="nav-item nav-link">
             <%= link_to 'DIGIHAIについて', static_pages_about_path, class: 'nav-link' %>
@@ -21,7 +21,10 @@
                 <%= link_to 'プロフィール', user_path(current_user), class: 'nav-link' %>
             </li>
             <li class="nav-item nav-link">
-                <%= link_to '登録ユーザー', users_path, class: 'nav-link' %>
+                <%= link_to '企業担当者一覧', users_path, class: 'nav-link' %>
+            </li>
+            <li class="nav-item nav-link">
+              <%= link_to '募集中の求人', posts_path, class: 'nav-link' %>
             </li>
             <li class="nav-item nav-link">
                 <%= link_to '求人を投稿', new_post_path, class: 'nav-link' %>
@@ -31,7 +34,7 @@
         <ul class="navbar-nav">
           <% if user_signed_in? %>
             <li class="nav-item nav-link">
-                <%= link_to 'ログアウト', destroy_user_session_path, method: :delete, class: 'nav-link' %>
+                <%= link_to 'ログアウト', destroy_user_session_path, method: :delete, class: 'nav-link border rounded' %>
             </li>
           <% else %>
             <li class="nav-item nav-link">
