--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -8,7 +8,7 @@
     <hr class="my-4">
     <p>今すぐ募集を確認する。</p>
     <div class='loginBtn'>
-      <a class="btn btn-primary btn-lg" href="#" role="button">ゲストログイン</a>
+      <%= link_to 'ゲストログイン', users_guest_sign_in_path, method: :post, class: 'btn btn-primary' %>
     </div>
   </div>
 </div>
