--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -8,9 +8,11 @@
           </li>
       </ul>
       <div class="card-body">
-        <h5 class="card-title">Special title treatment</h5>
-        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
+        <div class="text-right">
+          <%= link_to user_path(user.id), class: 'btn btn-primary btn-lg btn-block' do %>
+            プロフィール
+          <% end %>
+        </div>
       </div>
     </div>
   </div>
