--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,30 +7,12 @@
       <div class="row">
         <h1><%= @user.name %></h1>
         <% if @user == current_user %>
-          <%= link_to "プロフィールを編集", edit_user_registration_path, class: "btn btn-outline-dark common-btn edit-profile-btn" %>
+          <%= link_to "プロフィールを編集", edit_user_registration_path, class: "btn btn-primary" %>
         <% end %>
-        <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-          <div class="modal-dialog" role="document">
-            <div class="modal-content">
-              <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">設定</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                  <span aria-hidden="true">×</span>
-                </button>
-              </div>
-              <div class="list-group text-center">
-                <%= link_to "サインアウト", destroy_user_session_path, method: :delete, class: "list-group-item list-group-item-action" %>
-                <%= link_to "キャンセル", "#", class: "list-group-item list-group-item-action", "data-dismiss": "modal" %>
-              </div>
-            </div>
-          </div>
-        </div>
       </div>
       <% if @user == current_user %>
-        <div class="row">
-          <p>
-            <%= @user.email %>
-          </p>
+        <div class="row my-4">
+          <p>登録Eメール：<%= @user.email %></p>
         </div>
       <% end %>
     </div>
