UI向上のためデザインを変更 #23

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,5 +1,10 @@
 <footer>
-  <p>
-    Copyright © DIGIHAI
-  </p>
+  <ul class="footer-content">
+    <li>
+      Copyright © DIGIHAI
+    </li>
+    <li class="nav-item text-right ">
+      <%= link_to '利用規約', static_pages_terms_path, class: 'nav-link' %>
+    </li>
+  </ul>
 </footer>
