--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -13,15 +13,12 @@
           <li class="nav-item nav-link">
             <%= link_to 'DIGIHAIについて', static_pages_about_path, class: 'nav-link' %>
           </li>
-          <li class="nav-item nav-link">
-            <%= link_to '利用規約', static_pages_terms_path, class: 'nav-link' %>
-          </li>
           <% if user_signed_in? %>
             <li class="nav-item nav-link">
-                <%= link_to 'プロフィール', user_path(current_user), class: 'nav-link' %>
+                <%= link_to 'アカウント', user_path(current_user), class: 'nav-link' %>
             </li>
             <li class="nav-item nav-link">
-                <%= link_to '企業担当者一覧', users_path, class: 'nav-link' %>
+                <%= link_to '採用担当者一覧', users_path, class: 'nav-link' %>
             </li>
             <li class="nav-item nav-link">
               <%= link_to '募集中の求人', posts_path, class: 'nav-link' %>
