--- a/app/assets/stylesheets/footer.scss
+++ b/app/assets/stylesheets/footer.scss
@@ -6,3 +6,14 @@ footer {
   background-color: #11376b;
   color: #ffffff;
 }
+
+.footer-content{
+  list-style: none;
+  display: flex;
+  li{
+    margin: auto;
+  }
+  .nav-link{
+    color: #777777;
+  }
+}
