--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -39,7 +39,7 @@
               <span><%= post.content %></span>
               <div class="show-btn">
                 <%= link_to(post_path(post)) do %>
-                  <button class="btn-gradient-radius">詳細を確認する</button>
+                  <button class="btn btn-primary btn-lg btn-block"><i class="fas fa-angle-double-right"></i>詳細を確認する</button>
                 <% end %>
               </div>
             </div>
