--- a/app/views/private_business_users/index.html.erb
+++ b/app/views/private_business_users/index.html.erb
@@ -22,10 +22,10 @@
         </div>
         <div class="text-right">
           <%= link_to private_business_user_reviews_path(private_business_user), class: 'btn btn-primary btn-lg btn-block' do %>
-            レビューを見る
+            <i class="fas fa-angle-double-right"></i>レビューを見る
           <% end %>
           <%= link_to private_business_user_path(private_business_user), class: 'btn btn-primary btn-lg btn-block' do %>
-            レビューを投稿する
+            <i class="fas fa-angle-double-right"></i>レビューを投稿する
           <% end %>
         </div>
       </div>
