Titleを動的に表示するコードを実装 #25

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,3 +1,4 @@
+<% provide(:title, "募集中の求人") %>
 <% @posts.each do |post| %>
   <div class="col-md-8 col-md-2 mx-auto">
     <div class="card-wrap">
