--- a/app/views/private_business_users/index.html.erb
+++ b/app/views/private_business_users/index.html.erb
@@ -1,3 +1,4 @@
+<% provide(:title, "配達員一覧") %>
 <% @private_business_users.each do |private_business_user| %>
   <div class="container">
     <div class="card">
