--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,4 +1,4 @@
-<% provide(:title, "Home") %>
+<% provide(:title, "ようこそ") %>
 <div class="jumbotron">
   <div class="container">
     <h1 class="display-4">より簡単に。そしてよりよく。</h1>
