--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -31,17 +31,25 @@
         <ul class="navbar-nav">
           <% if user_signed_in? %>
             <li class="nav-item nav-link">
-                <%= link_to 'ログアウト', destroy_user_session_path, method: :delete, class: 'nav-link border rounded' %>
+                <%= link_to destroy_user_session_path, method: :delete, class: 'nav-link border rounded' do %>
+                  ログアウト <i class="fas fa-sign-out-alt"></i>
+                <% end %>
             </li>
           <% else %>
             <li class="nav-item nav-link">
-              <%= link_to '新規登録', new_user_registration_path, class: 'nav-link' %>
+              <%= link_to new_user_registration_path, class: 'nav-link' do %>
+                <i class="fas fa-user-plus"></i> 新規登録
+              <% end %>
             </li>
             <li class="nav-item nav-link">
-              <%= link_to 'ログイン', new_user_session_path, class: 'nav-link' %>
+              <%= link_to new_user_session_path, class: 'nav-link' do %>
+                <i class="fas fa-sign-in-alt"></i> ログイン
+              <% end %>
             </li>
             <li class="nav-item nav-link">
-              <%= link_to 'ゲストログイン', users_guest_sign_in_path, method: :post, class: 'nav-link border rounded' %>
+              <%= link_to users_guest_sign_in_path, method: :post, class: 'nav-link border rounded' do %>
+                <i class="fas fa-user-check"></i> ゲストログイン
+              <% end %>
             </li>
           <% end %>
         </ul>
