--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -8,14 +8,14 @@
       <div class="card-body">
         <%= form_with model: @post, class: "upload-images p-0 border-0" do |f| %>
           <div class="col pl-0">
-            <%= f.text_field :title, class: "form-control border-0", placeholder: "応募のタイトル" %>
+            <%= f.text_field :title, class: "form-control border-0", placeholder: "※必須：応募のタイトル" %>
           </div>
           <div class="form-group row mt-2">
             <div class="col-auto pr-0">
               <%= image_tag avatar_url(current_user), class: "post-profile-icon" %>
             </div>
             <div class="col pl-0">
-              <%= f.text_area :content, class: "form-control border-0", placeholder: "応募条件を書く" %>
+              <%= f.text_area :content, class: "form-control border-0", placeholder: "※必須：応募条件を書く" %>
             </div>
           </div>
           <div class="mb-3">
