--- a/app/assets/stylesheets/footer.scss
+++ b/app/assets/stylesheets/footer.scss
@@ -1,19 +1,23 @@
 footer {
   width: 100%;
-  height: 120px; 
-  text-align: center;
-  padding: 50px 0;
   background-color: #11376b;
   color: #ffffff;
-}
-
-.footer-content{
-  list-style: none;
-  display: flex;
-  li{
-    margin: auto;
+  p{
+    margin: 0 30px;
   }
-  .nav-link{
+  .footer-content{
+    float: right;
+    padding: 25px;
+  }
+  .foot-wrap ul{
+    list-style: none;
+    line-height:20px;
+  }
+  .footer-box{
+    padding: 60px;
+  }
+  .footer-nav{
+    text-decoration: none;
     color: #777777;
   }
 }
