--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -2,28 +2,28 @@
   <div class="card devise-card">
     <div class="form-wrap">
       <div class="form-group text-center">
-        <h2>DIGIHAI</h2>
-        <p class="text-secondary">仕事を掲載したり応募してみよう！</p>
+        <%= image_tag "logo.png", width: "250px", height: "100px" %>
+        <p class="text-secondary">さっそく登録して求人を投稿してみよう！</p>
       </div>
       <%= form_with scope: resource, as: resource_name, url: registration_path(resource_name), local: true do |f| %>
         <div class="form-group">
-          <%= f.email_field :email, autofocus: true, placeholder: "メールアドレス", class: "form-control" %>
+          <%= f.email_field :email, autofocus: true, placeholder: "※必須：メールアドレス", class: "form-control" %>
         </div>
 
         <div class="form-group">
-          <%= f.text_field :name, autofocus: true, placeholder: "フルネーム", class: "form-control" %>
+          <%= f.text_field :name, autofocus: true, placeholder: "※必須：名前", class: "form-control" %>
         </div>
 
         <div class="form-group">
-          <%= f.password_field :password, autocomplete: "off", placeholder: "パスワード", class: "form-control" %>
+          <%= f.password_field :password, autocomplete: "off", placeholder: "※必須：パスワード", class: "form-control" %>
         </div>
 
         <div class="form-group">
-          <%= f.password_field :password_confirmation, autocomplete: "off", placeholder: "パスワードの確認", class: "form-control" %>
+          <%= f.password_field :password_confirmation, autocomplete: "off", placeholder: "※必須：パスワードの確認", class: "form-control" %>
         </div>
 
         <div class="actions">
-          <%= f.submit "新規登録", class: "btn btn-primary w-100" %>
+          <%= f.submit "登録する", class: "btn btn-primary w-100" %>
         </div>
       <% end %>
 
