--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,19 +1,21 @@
 <header class="sticky-top">
   <div class='headerSection'>
-    <nav class="navbar navbar-expand-lg navbar-light p-4 mx-5">
-      <%= link_to "DIGIHAI", root_path %>
+    <nav class="navbar navbar-expand-lg navbar-light py-2 mx-5">
+      <%= link_to root_path do %>
+        <%= image_tag "logo1.png", width: "200px", height: "80px" %>
+      <% end %>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item nav-link">
-            <%= link_to '配達員一覧', root_path, class: 'nav-link' %>
-          </li>
-          <li class="nav-item nav-link">
             <%= link_to 'DIGIHAIについて', static_pages_about_path, class: 'nav-link' %>
           </li>
           <% if user_signed_in? %>
+            <li class="nav-item nav-link">
+              <%= link_to '配達員一覧', root_path, class: 'nav-link' %>
+            </li>
             <li class="nav-item nav-link">
                 <%= link_to 'アカウント', user_path(current_user), class: 'nav-link' %>
             </li>
