トップベージのUIを調整 #27

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -9,7 +9,7 @@
           <%= link_to "利用規約", static_pages_terms_path, class: "footer-nav" %>
         </li>
         <li class="nav-item">
-          <%= link_to "DIGIHAIについて", static_pages_about_path, class: "footer-nav" %>
+          <%= link_to "ABOUT", static_pages_home_path(anchor: "about"), class: "footer-nav" %>
         </li>
       </ul>
   </div>
