--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -1,13 +1,35 @@
-.container{
-  background-color: #f4f4f4;
-  border-radius: 10px;
-  margin: 40px auto;
-  padding: 40px;
-  h1,p{
-    text-align: center;
-    line-height: 200%;
+#wrapper{
+  background-image: url("home_image1.jpeg");
+  width: 100%;
+  height: auto;
+  background-size: cover;
+  background-position: left 100px top 40px;
+}
+
+.container-cover{
+  opacity: 0.7;
+  line-height: 2.5rem;
+  h1{
+    margin: 25px 0;
   }
-  .loginBtn{
-    text-align: center;
-  }
+}
+
+h2{
+  text-align: center;
+  margin-top: 50px;
+  opacity: 0.7;
+}
+
+.about{
+  text-align: center;
+  margin: 50px;
+  opacity: 0.7;
+  display: flex;
+}
+
+.col-6{
+  background-color: white;
+  border-radius: 50%;
+  padding: 30px;
+  margin: 20px;
 }
