--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -10,7 +10,7 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item nav-link">
-            <%= link_to 'DIGIHAIについて', static_pages_about_path, class: 'nav-link' %>
+            <%= link_to 'ABOUT', static_pages_home_path(anchor: 'about'), class: 'nav-link' %>
           </li>
           <% if user_signed_in? %>
             <li class="nav-item nav-link">
