アカウント削除機能を追加 #30

--- a/app/assets/stylesheets/users/edit.scss
+++ b/app/assets/stylesheets/users/edit.scss
@@ -2,6 +2,7 @@
   background: #fff;
   padding: 20px;
   border: 1px solid #e6e6e6;
+  border-radius: 5px;
 }
 
 .profile-form-wrap label {
@@ -10,4 +11,8 @@
 
 .edit-profile-wrapper {
   margin-top: 60px;
+}
+
+.back-link{
+  margin-top: 20px;
 }
