戻るリンクを追加 #30

--- a/app/views/reviews/index.html.erb
+++ b/app/views/reviews/index.html.erb
@@ -35,6 +35,9 @@
           <% end %>
         </tbody>
       </table>
+      <div class="back-link">
+        <%= link_to "一覧に戻る", private_business_users_path %>
+      </div>
     </div>
   </div>
 </div>
