--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -5,6 +5,12 @@
   margin-right: 10px;
 }
 
+.cover{
+  background-color: white;
+  border-radius: 5px;
+  padding: 40px;
+}
+
 .card-img-top{
   object-fit: cover;
   height: 200px;
