--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,45 +1,50 @@
 <% provide(:title, @post.title) %>
 <div class="col-md-10 col-md-offset-1 mx-auto postShow-wrap">
-  <div class="row post-wrap">
-    <div class="col-md-8">
-      <div class="card-left">
-        <%= image_tag @post.photos.first.image.url(:medium), class: "card-img-top" %>
-      </div>
-      <div class="m-2">
-        <strong>【募集要項】</strong><br>
-        <%= @post.content %>
-      </div>
-    </div>
-    <div class="col-md-4">
-      <div class="card-right">
-        <div class="card-right-name">
-          <%= link_to user_path(@post.user), class: "no-text-decoration" do %>
-            <%= image_tag avatar_url(@post.user), class: "post-profile-icon" %>
-          <% end %>
-          <%= link_to user_path(@post.user), class: "black-color no-text-decoration post-user-name",
-            title: @post.user.name do %>
-            <strong><%= @post.user.name %></strong>
-          <% end %>
-          <% if @post.user_id == current_user.id %>
-            <%= link_to post_path(@post), method: :delete, class: "ml-auto mx-0 my-auto", data: { confirm: '本当に削除しますか？' } do %>
-              <div class="delete-post-icon"></div>
-            <% end %>
-          <% end %>
+  <div class="cover">
+    <div class="row post-wrap">
+      <div class="col-md-8">
+        <div class="card-left">
+          <%= image_tag @post.photos.first.image.url(:medium), class: "card-img-top" %>
         </div>
-        <div class="row parts">
-          <div id="like-icon-post-<%= @post.id.to_s %>">
-            <% if @post.liked_by(current_user).present? %>
-              <%= link_to "お気に入りを取り消す", post_like_path(@post.id, @post.liked_by(current_user)), method: :DELETE, remote: true, class: "loved hide-text" %>
-            <% else %>
-              <%= link_to "お気に入り", post_likes_path(@post), method: :POST, remote: true, class: "love hide-text" %>
+        <div class="m-2">
+          <strong>【募集要項】</strong><br>
+          <%= @post.content %>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="card-right">
+          <div class="card-right-name">
+            <%= link_to user_path(@post.user), class: "no-text-decoration" do %>
+              <%= image_tag avatar_url(@post.user), class: "post-profile-icon" %>
+            <% end %>
+            <%= link_to user_path(@post.user), class: "black-color no-text-decoration post-user-name",
+              title: @post.user.name do %>
+              <strong><%= @post.user.name %></strong>
+            <% end %>
+            <% if @post.user_id == current_user.id %>
+              <%= link_to post_path(@post), method: :delete, class: "ml-auto mx-0 my-auto", data: { confirm: '本当に削除しますか？' } do %>
+                <div class="delete-post-icon"></div>
+              <% end %>
             <% end %>
           </div>
-        </div>
-          <div id="like-text-post-<%= @post.id.to_s %>">
-            <%= render "like_text", { likes: @post.likes } %>
+          <div class="row parts">
+            <div id="like-icon-post-<%= @post.id.to_s %>">
+              <% if @post.liked_by(current_user).present? %>
+                <%= link_to "お気に入りを取り消す", post_like_path(@post.id, @post.liked_by(current_user)), method: :DELETE, remote: true, class: "loved hide-text" %>
+              <% else %>
+                <%= link_to "お気に入り", post_likes_path(@post), method: :POST, remote: true, class: "love hide-text" %>
+              <% end %>
+            </div>
           </div>
-        <div class="post-time"><%= time_ago_in_words(@post.created_at).upcase %>前</div>
-        <hr>
+            <div id="like-text-post-<%= @post.id.to_s %>">
+              <%= render "like_text", { likes: @post.likes } %>
+            </div>
+          <div class="post-time"><%= time_ago_in_words(@post.created_at).upcase %>前</div>
+          <hr>
+          <div class="back-link">
+            <%= link_to "求人一覧に戻る", posts_path %>
+          </div>
+        </div>
       </div>
     </div>
   </div>
