--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -16,6 +16,9 @@
           <p>登録Eメール：<%= @user.email %></p>
         </div>
       <% end %>
+      <div class="back-link">
+        <%= link_to "一覧に戻る", users_path %>
+      </div>
     </div>
   </div>
 </div>
