応募ボタンを追加 #44

--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -115,6 +115,19 @@
   margin: 20px auto;
 }
 
+.entry-btn{
+  text-align: center;
+  margin: 20px auto;
+}
+
+.entry-in-btn{
+  padding: 10px;
+  color: #fafafa;
+  background-color: #77b456;
+  border: none;
+  border-radius: 5px;
+}
+
 // userアイコン
 .user-icon{
   margin-bottom: 10px;
