--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -8,7 +8,8 @@
       <div class="card-body">
         <%= form_with model: @post, class: "upload-images p-0 border-0" do |f| %>
           <div class="col pl-0">
-            <%= f.text_field :title, class: "form-control border-0", placeholder: "※必須：応募のタイトル" %>
+            <%= f.label :title %>
+            <%= f.text_field :title, class: "form-control border-0", placeholder: "※必須：応募のタイトル", id: 'post_title' %>
           </div>
           <div class="form-group row mt-2">
             <div class="col-auto pr-0">
