画面表示の乱れを修正 #50

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,7 +8,7 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav mr-auto">
+        <ul class="navbar-nav me-auto">
           <li class="nav-item nav-link">
             <%= link_to 'ABOUT', static_pages_home_path(anchor: 'about'), class: 'nav-link' %>
           </li>
