--- a/app/views/private_business_users/show.html.erb
+++ b/app/views/private_business_users/show.html.erb
@@ -11,7 +11,7 @@
             <div class="star-rating-front" style="width: <%= @private_business_user.review_score_percentage %>%">★★★★★</div>
             <div class="star-rating-back">★★★★★</div>
           </div>
-          <div class="average-score-display ml-3 pt-2"><%= @private_business_user.avg_score %>点（<%= @private_business_user.reviews.count %>件のレビュー）
+          <div class="average-score-display ms-3 pt-2"><%= @private_business_user.avg_score %>点（<%= @private_business_user.reviews.count %>件のレビュー）
           </div>
         </div>
       </div>
