--- a/app/views/reviews/_form.html.erb
+++ b/app/views/reviews/_form.html.erb
@@ -14,7 +14,7 @@
         <span class="fa fa-star-o" id="star"></span>
         <span class="fa fa-star-o" id="star"></span>
       </div>
-      <div class="ml-3 rating-value-display"><span id="rating-value-display">0</span>/5</div>
+      <div class="ms-3 rating-value-display"><span id="rating-value-display">0</span>/5</div>
     </div>
     <div class="form-area">
       <%= f.hidden_field :private_business_user_id, value: private_business_user.id %>
