--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -9,7 +9,7 @@
           </li>
       </ul>
       <div class="card-body">
-        <div class="text-right">
+        <div class="text-end">
           <%= link_to user_path(user.id), class: 'btn btn-primary btn-lg btn-block' do %>
             <i class="fas fa-angle-double-right"></i>プロフィール
           <% end %>
