--- a/app/views/private_business_users/index.html.erb
+++ b/app/views/private_business_users/index.html.erb
@@ -15,13 +15,13 @@
                 <div class="star-rating-front" style="width: <%= private_business_user.review_score_percentage %>%">★★★★★</div>
                 <div class="star-rating-back">★★★★★</div>
               </div>
-              <div class="average-score-display ml-3 pt-2">
+              <div class="average-score-display ms-3 pt-2">
                 <%= private_business_user.avg_score %>点（<%= private_business_user.reviews.count %>件のレビュー）
               </div>
             </div>
           </div>
         </div>
-        <div class="text-right">
+        <div class="text-end">
           <%= link_to private_business_user_reviews_path(private_business_user), class: 'btn btn-primary btn-lg btn-block' do %>
             <i class="fas fa-angle-double-right"></i>レビューを見る
           <% end %>
